z-index issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,7 +34,9 @@ main.page-signup, main.page-login {
     background-image: url(/images/bg_parachute.jpg);
     background-size: cover;
     background-position:center;
-    z-index: -3;
+}
+main.page-signup .container, main.page-login .container {
+    z-index: 10;
 }
 .login-container{
     position: relative;
